# CosmoGarden

./: CMakeLists.txt  arcball.cpp  arcball.h  batchdrawer.cpp  batchdrawer.h  bezier.cpp  bezier.h  branch.cpp  branch.h  common.cpp  common.h  compile  cosml_parse.js  cosmogarden.js  drawable.cpp  drawable.h  em_wrapper.h  index.html  main.cpp  math_utils.cpp  math_utils.h  module.data  module.js  module.wasm  plant.cpp  plant.h  shader_utils.cpp  style.css  tree.cpp  tree.h  web.cpp
shaders/: monocolor.f.glsl  monocolor.v.glsl  phong.f.glsl  phong.v.glsl
src/: Arcball.cpp  Arcball.h  Camera.cpp  Camera.h  Scene.cpp  Scene.h  arcball.cpp  batchdrawer.cpp  bezier.cpp  branch.cpp  branch.h  common.cpp  common.h  consts.h  drawable.cpp  drawable.h  main.cpp  math_utils.cpp  plant.cpp  plant.h  tree.cpp  tree.h
src/gfx/: Material.h  SolidColorMaterial.cpp  SolidColorMaterial.h
